--- a/frontend/src/components/styles/ShoppingList/createShoppingListForm.css
+++ b/frontend/src/components/styles/ShoppingList/createShoppingListForm.css
@@ -1,6 +1,6 @@
 .container {
 	background-color: rgba(255, 255, 255, 0.6);
-	width: 40%;
+	max-width: 350px;
 	padding: 1rem;
 	border-radius: 1rem;
 	/* border: 1px solid #0e65a3; */
