--- a/frontend/src/components/styles/ShoppingList/shoppingList.css
+++ b/frontend/src/components/styles/ShoppingList/shoppingList.css
@@ -1,3 +1,11 @@
+.shopping-list-container {
+	display: flex;
+	gap: 10px;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+}
+
 .shopping-list {
 	border: 1px solid blue;
 	background-color: white;
