--- a/frontend/src/components/styles/app.css
+++ b/frontend/src/components/styles/app.css
@@ -5,3 +5,10 @@
 	box-sizing: border-box;
 	font-family: 'Carter One', cursive;
 }
+
+.App {
+	height: 100vh;
+	background-color: #f39f86;
+	background-image: linear-gradient(315deg, #f39f86 0%, #f9d976 74%);
+	overflow: hidden;
+}
