--- a/frontend/src/components/styles/authForms.css
+++ b/frontend/src/components/styles/authForms.css
@@ -1,11 +1,15 @@
 form.signup,
 form.login {
 	flex-direction: column;
-	margin: 40px auto;
+	margin: auto;
 	padding: 20px;
 	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 0.6);
 	max-width: 350px;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
 		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.auth-container {
+	padding-top: 20px;
 }
