--- a/frontend/src/components/list/List-styles/overview.css
+++ b/frontend/src/components/list/List-styles/overview.css
@@ -12,8 +12,13 @@
 .sidebar {
 	background-color: #0e65a3;
 	height: 100%;
-	width: 250px;
 	border-radius: 10px 0 0 10px;
+	color: white;
+	min-width: 200px;
+}
+
+.arrow {
+	visibility: hidden;
 	color: white;
 }
 
@@ -28,4 +33,22 @@
 	background-color: rgba(255, 255, 255, 0.6);
 	padding: 1rem;
 	border-radius: 0 10px 10px 0;
+}
+
+@media (max-width: 450px) {
+	.sidebar {
+		position: fixed;
+		border-radius: 4px;
+		height: inherit;
+		width: 200px;
+	}
+
+	.hideSidebar {
+		width: 30px;
+		background-color: #0e65a3;
+	}
+
+	.arrow {
+		visibility: visible;
+	}
 }
