--- a/frontend/src/components/list/List-styles/overview.css
+++ b/frontend/src/components/list/List-styles/overview.css
@@ -38,7 +38,7 @@
 @media (max-width: 450px) {
 	.sidebar {
 		position: fixed;
-		border-radius: 4px;
+		border-radius: 0;
 		height: inherit;
 		width: 200px;
 	}
