item highlight change

--- a/frontend/src/components/list/List-styles/item.css
+++ b/frontend/src/components/list/List-styles/item.css
@@ -28,7 +28,7 @@
 
 .item-container:hover {
 	text-decoration: underline;
-	background: darkcyan;
+	background: #0e65a3;
 	color: white;
 	border-radius: 4px;
 }
